<resources>
    <string name="app_name">Take Friends</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Log Out</string>
    <string name="action_online">Online</string>
    <string name="action_search">Search</string>
    <string name="friends_request">Friends Request</string>

    <string name="email_nev">geniuscrypticlasoft@gmail.com</string>
    <string name="your_d_app">Your Dating App</string>

    <string name="chatlist">Chat</string>
    <string name="friends">Friends</string>
    <string name="requests">Requests</string>
    <string name="home">Home</string>

    <string name="account_setting">Account Setting</string>
    <string name="find_people">Find People</string>
    <string name="viewSendReq">View Send Request</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="all_user">All User</string>
    <string name="already_account"><u>i have already account</u></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="save_change">save change</string>
    <string name="save_change2">change status</string>
    <string name="edit_profile">edit profile</string>

    <!-- TODO: Use for only sample xml file -->
    <string name="d_name">Display Name</string>
    <string name="name">Name</string>
    <string name="d_status">Display Status</string>
    <string name="select_your_image">select your profile image</string>

    <string name="a_request">Confirm</string>
    <string name="d_request">Delete</string>
    <string name="frndListDate">02/02/1997</string>

    <!-- TODO: App main text -->

    <string name="app_main_text">your chatting app</string>
    <string name="splash_log_in">log in</string>
    <string name="create_account">create new account</string>
    <string name="message_hint">type your message</string>
    <string name="last_seen">last seen</string>
    <string name="online">online</string>
    <string name="search_item">Search Here</string>

    <string name="reg_name">Your Name</string>
    <string name="reg_email">Your Email</string>
    <string name="reg_password">Password</string>
    <string name="reg_re_password">Confirm Password</string>

    <string name="choose_photo">Choose photo</string>
    <string name="take_camera">Take from Camera</string>
    <string name="take_gallery">Take form Gallery</string>


    <string name="choose_image">Choose profile image</string>
    <string name="contact_number">Number</string>
    <string name="contact_email">Email</string>
    <string name="location">Location:</string>
    <string name="occupation">Occupation:</string>
    <string name="company">Company:</string>
    <string name="profession">Profession:</string>
    <string name="my_profession">My Profession:</string>
    <string name="institute">Institute:</string>
    <string name="bio">Your Details Max(100 char)</string>
    <string name="bio1">profile bio</string>
    <string name="birthdate">Birth Date Ex: 02/02/1997</string>
    <string name="birth">Birth Date:</string>
    <string name="search_text">Search here</string>
    <string name="must_select_profile_image">* must select your profile image</string>

    <string name="update">Update</string>

    <string name="send_frnd_req">Send Friends Request</string>
    <string name="disline_frnd_req">Decline Request</string>


    <string name="login">Log in</string>
    <string name="noaccount"><u>i have no account</u></string>
    <string name="noaccount_reg_"><u> register</u></string>
    <string name="noaccount_reg">Register</string>

    <!-- TODO: App main text User my profile -->

    <string name="name_age">Name and age</string>
    <string name="age">age</string>
    <string name="gender">Gender</string>
    <string name="status">Status:</string>
    <string name="p_number">Number:</string>
    <string name="email">Email:</string>
    <string name="profilebio">Bio Data:</string>
    <string name="students">Students</string>
    <string name="jobholder">Job Holder</string>

    <string-array name="user_gander">
        <item>Sex</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_show_user">ShowUser</string>


</resources>
