<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".AllUser.UserProfile">

    <include
        android:id="@+id/user_profile_app_ber"
        layout="@layout/custom_app_ber" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="3.5"
        android:background="@drawable/profile_gradint"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/display_profile_image"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_gravity="center"
            android:src="@drawable/lovelogo" />

        <TextView
            android:id="@+id/display_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d_name"
            android:fontFamily="@font/southiya"
            android:textStyle="italic"
            android:textColor="@color/colorWhite"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/display_profile_number"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/standardAppColorEnd"
            android:gravity="center"
            android:text="@string/p_number"
            android:textColor="@color/colorBlack"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/display_profile_age"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/standardAppColorStart"
            android:gravity="center"
            android:text="@string/age"
            android:textColor="@color/colorBlack"
            android:textSize="12sp" />


    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="5.5"
        app:cardElevation="10sp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textColor="@color/colorRed"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/display_profile_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/gender"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:background="@color/colorGray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:layout_marginTop="15sp"
                    android:textColor="@color/colorRed"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/display_profile_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/location"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:background="@color/colorGray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:text="@string/email"
                    android:textColor="@color/colorRed"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/display_profile_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/email"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:background="@color/colorGray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:text="@string/profession"
                    android:textColor="@color/colorRed"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/display_profile_profession"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/profession"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:background="@color/colorGray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:text="@string/institute"
                    android:textColor="@color/colorRed"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/display_profile_institute"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/institute"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:background="@color/colorGray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:text="@string/profilebio"
                    android:textColor="@color/colorRed"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/display_profile_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/bio"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:background="@color/colorGray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:layout_marginTop="15sp"
                    android:orientation="horizontal"
                    android:paddingStart="5sp"
                    android:paddingEnd="5sp">

                    <Button
                        android:id="@+id/send_frnd_request"
                        android:layout_width="0sp"
                        android:layout_height="40sp"
                        android:layout_gravity="center"
                        android:layout_margin="20sp"
                        android:layout_weight="1"
                        android:background="@drawable/round2"
                        android:text="@string/send_frnd_req"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/cancel_frnd_request"
                        android:layout_width="0sp"
                        android:layout_height="40sp"
                        android:layout_gravity="center"
                        android:layout_margin="20sp"
                        android:layout_weight="1"
                        android:background="@drawable/round2"
                        android:text="@string/disline_frnd_req"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>

</LinearLayout>