<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".MyAccount.MyProfile">

    <include
        android:id="@+id/toolbar_myprofile"
        layout="@layout/custom_app_ber" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="3.5"
        android:background="@drawable/profile_gradint"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/myimage"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_gravity="center"
            android:src="@drawable/lovelogo" />

        <TextView
            android:id="@+id/displyname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/southiya"
            android:text="@string/d_name"
            android:textColor="@color/colorWhite"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mynumber"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/standardAppColorEnd"
            android:gravity="center"
            android:text="@string/p_number"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/myage"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/standardAppColorStart"
            android:gravity="center"
            android:text="@string/age"
            android:textColor="@color/colorBlack"
            android:textSize="12sp" />

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="5.5"
        app:cardElevation="10sp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textColor="@color/colorRed"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/mygender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:background="@color/colorGray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/d_status"
                    android:layout_marginTop="15sp"
                    android:textColor="@color/colorRed"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/mylocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/location"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:background="@color/colorGray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:text="@string/d_status"
                    android:textColor="@color/colorRed"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/mystatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/d_status"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:background="@color/colorGray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:text="@string/email"
                    android:textColor="@color/colorRed"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/myemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/email"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:background="@color/colorGray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:text="@string/my_profession"
                    android:textColor="@color/colorRed"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/myprofession"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/my_profession"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:background="@color/colorGray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:text="@string/institute"
                    android:textColor="@color/colorRed"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/myinstitute"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/institute"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:background="@color/colorGray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:text="@string/profilebio"
                    android:textColor="@color/colorRed"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/mybio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/profilebio"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:background="@color/colorGray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="15sp"
                    android:layout_marginBottom="2sp">

                    <Button
                        android:id="@+id/editprofile"
                        android:layout_width="200sp"
                        android:layout_height="45sp"
                        android:background="@drawable/round2"
                        android:text="@string/edit_profile"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>

</LinearLayout>